this is 2nd commit 7.02

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                         </div>
                 </nav>
             </div>
-            <!-- ======================nav end=================================== -->
+            <!-- ======================banar section=================================== -->
             <section id="banar-section">
                 <div class="container">
                     <div class="banar">
                         <div class="banar-text">
                             <p class="banar-tital">Play Like The</p>
-                            <h1 class="banar-hadding">G.O.A.T.</h1>
+                            <h1 class="banar-hadding text-gradina">G.O.A.T.</h1>
                             <div class="banar-div">
                                 <img src="images/palabutton.svg" alt="">
                                 <p>1-Click instant play</p>
@@ -67,7 +67,7 @@
                     </div>
                 </div>
             </section>
-            <!-- ======================nav end=================================== -->
+            <!-- ====================== we ar starta=================================== -->
         </header>
         <main>
             <div class="container">
@@ -76,18 +76,18 @@
                         <img src="images/we-are.png" alt="">
                     </div>
                     <div class="we-text">
-                        <h2>We are gamer</h2>
-                        <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
-                        <button>know more</button>
-                        <p>Our purpose...</p>
-                        <h6> “unleash the gamer in everyone”</h6>
+                        <h2 class="we-hadding text-gradina">We are gamer</h2>
+                        <p class="we-discription">An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                        <button class="we-button">know more</button>
+                        <p class="our">Our purpose...</p>
+                        <h6 class="unleash"> “unleash the gamer in everyone”</h6>
                     </div>
                 </section>
             </div>
-            <!-- ======================nav end=================================== -->
+            <!-- ====================== online game=================================== -->
             <div class="container">
                 <section id="online-games">
-                    <h2 class="game-hadding">Online Games Funny Videos</h2>
+                    <h2 class="game-hadding">Online Games <m class="text-gradina">Funny Videos</m></h2>
                     <p class="game-tital">A Collection of Hilarious Videos to Brighten Your Day</p>
                     <div class="online-games-card">
                         <div class="card">
@@ -110,42 +110,18 @@
                 </section>
             </div>
 <!-- ===================tik============================== -->
-            <!-- ======================nav end=================================== -->
-            <div class="container">
-                <section id="play-instantly">
-                    <div class="play-text">
-                        <h2>Play Instantly,</h2>
-                        <h2>No Downloads No Installs.</h2>
-                        <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
-                    </div>
-                    <div class="play-img">
-                        <img class="play-img1" src="images/play-instantly1.png" alt="">
-                        <img class="play-img2" src="images/play-instantly2.png" alt="">
-                    </div>
-                </section>
-            </div>
-            <!-- ======================nav end=================================== -->
-            <div class="container">
-           <section id="play-games">
-            <div class="games-img">
-                <img class="imgs1" src="images/play-games-1.png" alt="">
-                <img class="imgs2" src="images/play-games-2.png" alt="">
-            </div>
-            <div class="play-games-text">
-                <h2>Play Games Online Anywhere,Anytime!</h2>
-                <p>PC. dad s phone, moms tablet, or your Chromebook,with Gamer you can play your favorite games online for free, any time, anywhere , on any device</p>
-            </div>
-           </section>
-        </div>
-            <!-- ======================nav end=================================== -->
+<!-- ======================nav end=================================== -->
+<!-- ======================nav end=================================== -->
+            
+<!-- ====================== careers=================================== -->
             <section id="careers">
                 <div class="container">
             <div class="careers-main">
                 <div class="careers-text">
-                    <h2>Careers</h2>
-                    <p>Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+                    <h2 class="careers-hadding">Careers</h2>
+                    <p class="careers-contant">Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
                     <div class="text-main">
-                        <div class="text-lapt">
+                        <div class="text-lapt careers-contant-lept">
                             <ul>
                                 <li></li>
                                 <li>Multimedia Artist +</li>
@@ -156,7 +132,7 @@
                                 <li> Senior User Acuisition Specialist +</li>
                             </ul>
                         </div>
-                        <div class="text-right">
+                        <div class="text-right careers-contant-lept">
                             <ul>
                                 <li>Lisbon, Portugal</li>
                                 <li> Lisbon, Portugal</li>                 
@@ -167,55 +143,57 @@
                             </ul>
                         </div>
                     </div>
-                    <button>See all positions</button>
+                    <button class="careers-button">See all positions</button>
                 </div>
                 <div class="careers-img"><img src="images/careers.png" alt=""></div>
             </div>
         </div>
         </section>
-        <!-- ======================nav end=================================== -->
-        <div class="container">
-            <section id="games-name-main">
-                <div class="game-name">
+        </main>
+          <!-- ====================== careers scation end=================================== -->
+          <!-- ====================== new scation start=================================== -->
+          <div class="container">
+            <div class="game-ar-talika">
+                <div class="games-only">
                     <img src="images/action.png" alt="">
                     <p>Action Games</p>
                 </div>
-                <div class="game-name">
+                <div class="games-only">
                     <img src="images/adventure.png" alt="">
                     <p>Adventure Games</p>
                 </div>
-                <div class="game-name">
+                <div class="games-only active">
                     <img src="images/arcade.png" alt="">
                     <p>Arcade Games</p>
                 </div>
-                <div class="game-name">
+                <div class="games-only">
                     <img src="images/educational.png" alt="">
                     <p>Educational Games</p>
                 </div>
-                <div class="game-name">
+                <div class="games-only">
                     <img src="images/word.png" alt="">
                     <p>Word Games</p>
                 </div>
-                <div class="game-name">
+                <div class="games-only">
                     <img src="images/role.png" alt="">
                     <p>Role Palying Games</p>
                 </div>
-                <div class="game-name">
+                <div class="games-only">
                     <img src="images/music.png" alt="">
                     <p>Music & Audio Games</p>
                 </div>
-                <div class="game-name">
+                <div class="games-only">
                     <img src="images/puzzle.png" alt="">
                     <p>Puzzle Games</p>
                 </div>
-                <div class="game-name">
+                <div class="games-only">
                     <img src="images/strategy.png" alt="">
                     <p>Strategy Games</p>
                 </div>
-            </section>
-        </div>
-        </main>
-          <!-- ======================nav end=================================== -->
+            </div>
+          </div>
+          <!-- ====================== new scation end=================================== -->
+          <!-- ====================== footer scation start=================================== -->
         <footer>
           <div class="container">
             <div class="logo footer-logo">
