--- a/index.html
+++ b/index.html
@@ -110,11 +110,20 @@
                     </div>
                 </section>
             </div>
-<!-- ===================tik============================== -->
+<!-- ===================onlin game end============================== -->
 <!-- ======================nav end=================================== -->
-<!-- ======================nav end=================================== -->
-            
-<!-- ====================== careers=================================== -->
+<div class="container playimain">
+    <div class="textn">
+        <h2 class="inst-hadding"><span class="parimari-color">Play Instantly,</span> <br>No Downloads <br> No Installs.</h2>
+        <p class="inst-tital">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+    </div>
+    <div class="imgn">
+        <img class="img1" src="images/play-instantly1.png" alt="">
+        <img class="img2" src="images/play-instantly2.png" alt="">
+    </div>
+</div>
+<!-- ======================nav end=================================== -->       
+<!-- ====================== careers start=================================== -->
             <section id="careers">
                 <div class="container">
             <div class="careers-main">
